changed height of div#crisis to solve overlap problem

--- a/css/dpt_classic.css
+++ b/css/dpt_classic.css
@@ -343,7 +343,7 @@ div#crisis {
   -webkit-box-shadow: 0px 0px 20px #030911;
           box-shadow: 0px 0px 20px #030911;
   bottom: 49px;
-  height: 550px;
+  height: 500px;
   background-color: #28a9e1;
 }
 
